Fix inconsistent spacing between column group borders on resizable tables
Removing width: 100% also fixes the asymmetric lack of spacing on the right
side of column group headers.

--- a/srcjs/reactable.css
+++ b/srcjs/reactable.css
@@ -157,7 +157,6 @@ input[type='radio'].rt-select-input {
   left: 8px;
   right: 8px;
   bottom: 0;
-  width: 100%;
   height: 1px;
   background-color: hsl(0, 0%, 90%);
 }
